--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Redirecting...</title>
     </head>
 	<body>
-		<p>Redirecting to <a href="https://empowered-innovations.bss.design">this link...</a></p>
+		<p>Redirecting to <a href="https://empoweredinnovations.bss.design/projects.html">this link...</a></p>
 	</body>
 </html>
