--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; url='https://empowered-innovations.bss.design'" />
+		<meta http-equiv="refresh" content="0; url='https://empoweredinnovations.bss.design'" />
 		<title>Redirecting...</title>
     </head>
 	<body>
